--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 </header>
                 <main>
                     <div class="flex justify-center mb-8">
-                         <img src="http://googleusercontent.com/file_content/3" alt="Spinning Pear GIF" class="w-24 h-24 animate-spin" style="animation-duration: 3s;">
+                         <img src="pear-logo.jpg" alt="Spinning Pear Logo" class="w-24 h-24 animate-spin" style="animation-duration: 3s;">
                     </div>
                     <p class="text-green-400 text-xl mb-6">Click on a topic to explore!</p>
                     <div class="grid grid-cols-2 md:grid-cols-4 gap-8 max-w-2xl mx-auto items-start">
@@ -201,7 +201,7 @@
                             </div>
                             <div id="music-icon-nav" class="cursor-pointer transform group-hover:scale-110 transition-transform">
                                 <div class="bg-indigo-800 p-4 rounded-lg border-4 border-dashed border-pink-500">
-                                     <img src="http://googleusercontent.com/file_content/2" alt="Music Icon" class="w-full h-auto mx-auto rounded-md">
+                                     <img src="music-icon.jpg" alt="Music Icon" class="w-full h-auto mx-auto rounded-md">
                                 </div>
                                 <p class="mt-2 text-xl font-vt323 text-white">Music Dissonance</p>
                             </div>
