--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         <div class="group relative text-center">
                             <div id="physics-icon-nav" class="cursor-pointer transform group-hover:scale-110 transition-transform">
                                 <div class="bg-indigo-800 p-4 rounded-lg border-4 border-dashed border-pink-500">
-                                    <img src="physics-icon.png" alt="Standard Model Icon" class="w-full h-auto mx-auto rounded-md">
+                                    <img src="physics-icon.jpg" alt="Standard Model Icon" class="w-full h-auto mx-auto rounded-md">
                                 </div>
                                 <p class="mt-2 text-xl font-vt323 text-white">Standard Model</p>
                             </div>
