--- a/standard-model.html
+++ b/standard-model.html
@@ -1028,7 +1028,7 @@
 
     <div class="container mx-auto px-4 py-8">
         <header class="text-center mb-8 relative">
-            <h1 class="text-4xl md:text-5xl font-bold tracking-tight">The Interactive Standard Model</h1>
+            <h1 class="text-4xl md:text-5xl font-bold tracking-tight">The Interactive Standard Model of Particle Physics</h1>
             <p class="mt-4 text-lg max-w-3xl mx-auto">
                 <span class="dark:text-gray-400 text-gray-600">An explorable visualization of the fundamental particles and forces that make up our universe.</span>
             </p>
