--- a/standard-model.html
+++ b/standard-model.html
@@ -1927,13 +1927,28 @@
                 const prop = propertySelect.value;
                 const isLog = prop.includes('mass');
 
-                const rawValues = Object.entries(particleData).map(([id, p]) => {
-                    let val = p[prop];
-                    if (prop === 'theorized' || prop === 'discovered') val = p[prop];
-                    else if (typeof val === 'string' && val.includes('/')) val = eval(val);
-                    else if (typeof val === 'string' && val.includes('±')) val = parseFloat(val.substring(1));
-                    return { id, value: Number(val) };
-                }).filter(item => !isNaN(item.value) && (isLog ? item.value > 0 : true));
+                // Correctly parse the value and invert it for antimatter charge
+const rawValues = Object.entries(particleData).map(([id, p]) => {
+    let val = p[prop];
+    let numVal;
+
+    if (prop === 'theorized' || prop === 'discovered') {
+        numVal = Number(val);
+    } else if (typeof val === 'string' && val.includes('/')) {
+        numVal = eval(val);
+    } else if (typeof val === 'string' && val.includes('±')) {
+        numVal = parseFloat(val.substring(1));
+    } else {
+        numVal = Number(val);
+    }
+
+    // *** FIX: Invert the charge value if antimatter is toggled ***
+    if (prop === 'charge' && isAntimatter) {
+        numVal = -numVal;
+    }
+
+    return { id, value: numVal };
+}).filter(item => !isNaN(item.value) && (isLog ? item.value > 0 : true));
 
                 const valueMap = new Map();
                 rawValues.forEach(item => {
@@ -1949,7 +1964,7 @@
                 let ticks = [];
                 if (prop === 'charge') {
                     minVal = -1; maxVal = 1;
-                    ticks = [-1, -1 / 3, 0, 2 / 3, 1];
+                    ticks = [-1, -2 / 3, -1 / 3, 0, 1 / 3, 2 / 3, 1];
                 } else if (prop === 'spin') {
                     minVal = 0; maxVal = 2;
                     ticks = [0, 0.5, 1, 2];
@@ -2018,7 +2033,11 @@
                         const label = document.createElement('div');
                         label.className = 'tick-label';
                         label.style.left = `${percent}%`;
-                        if (prop === 'charge') label.textContent = tick === -1 / 3 ? '-¹/₃' : tick === 2 / 3 ? '²/₃' : tick.toFixed(0);
+                        if (prop === 'charge') {
+     if (Math.abs(Math.abs(tick) - 1/3) < 1e-9) label.textContent = (tick > 0 ? '' : '-') + '¹/₃';
+     else if (Math.abs(Math.abs(tick) - 2/3) < 1e-9) label.textContent = (tick > 0 ? '' : '-') + '²/₃';
+     else label.textContent = tick.toFixed(0);
+}
                         else if (prop === 'spin') label.textContent = tick === 0.5 ? '¹/₂' : tick;
                         else if (isLog) label.innerHTML = `10<sup>${Math.round(Math.log10(tick))}</sup>`;
                         else label.textContent = Math.round(tick);
