--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <iframe id="standard-model-frame"
                             src="standard-model.html"
                             title="Interactive Standard Model"
-                            style="width:100%; height:100%; border:0; border-radius:0.5rem; background:#111827;">
+                            style="width:100%; height:80vh; border:0; border-radius:0.5rem; background:#111827;">
                     </iframe>
                 </main>
             </div>
