--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                 <div class="bg-indigo-800 p-4 rounded-lg border-4 border-dashed border-pink-500">
                                     <img src="physics-icon.jpg" alt="Standard Model Icon" class="w-full h-auto mx-auto rounded-md">
                                 </div>
-                                <p class="mt-2 text-xl font-vt323 text-white">Standard Model</p>
+                                <p class="mt-2 text-xl font-vt323 text-white">Quantum Physics</p>
                             </div>
                         </div>
     
@@ -246,7 +246,7 @@
         <div id="physics-page" class="hidden min-h-screen bg-gray-900 p-4 md:p-8 relative flex flex-col">
             <div class="container mx-auto flex flex-col flex-grow">
                 <header class="flex justify-between items-center mb-4 flex-shrink-0">
-                    <h1 class="text-4xl md:text-6xl font-vt323 text-teal-300">Interactive Standard Model</h1>
+                    <h1 class="text-4xl md:text-6xl font-vt323 text-teal-300">Quantum Physics</h1>
                     <div class="flex items-center gap-4">
                         <button id="back-from-physics"
                                 class="bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-lg pixel-border transition-colors">
