--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                 <div class="bg-indigo-800 p-4 rounded-lg border-4 border-dashed border-pink-500">
                                      <img src="music-icon.jpg" alt="Music Icon" class="w-full h-auto mx-auto rounded-md">
                                 </div>
-                                <p class="mt-2 text-xl font-vt323 text-white">Musical Dissonance</p>
+                                <p class="mt-2 text-xl font-vt323 text-white">Music Dissonance</p>
                             </div>
                         </div>
                         <!-- Standard Model Icon -->
@@ -231,7 +231,7 @@
         <div id="music-page" class="hidden min-h-screen bg-gray-900 p-4 md:p-8 relative flex flex-col">
             <div class="container mx-auto flex flex-col flex-grow">
                 <header class="flex justify-between items-center mb-4 flex-shrink-0">
-                    <h1 class="text-4xl md:text-6xl font-vt323 text-teal-300">Musical Dissonance</h1>
+                    <h1 class="text-4xl md:text-6xl font-vt323 text-teal-300">Music Dissonance</h1>
                     <div class="flex items-center gap-4">
                         <button id="how-it-works-button" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg pixel-border transition-colors">How it Works</button>
                         <button id="back-button" class="bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-lg pixel-border transition-colors">&lt; Back to Home</button>
