--- a/standard-model.html
+++ b/standard-model.html
@@ -1396,7 +1396,7 @@
                 { name: 'Virus (Influenza)', size: 1e-7, icon: '🦠', description: '<p><b>Mass:</b> ~1×10<sup>-18</sup> kg. Trillions are needed to equal the mass of a salt grain.</p><p><b>Size:</b> ~100 nm. 1,000x smaller than a hair\'s width.</p>' },
                 { name: 'Red Blood Cell', size: 7.5e-6, icon: '🩸', description: '<p><b>Mass:</b> ~5×10<sup>-14</sup> kg. Billions weigh less than a gram.</p><p><b>Size:</b> ~8 μm. About one-tenth a human hair\'s width.</p>' },
                 { name: 'Pollen Grain', size: 3.0e-5, icon: '🌼', description: '<p><b>Mass:</b> ~1×10<sup>-11</sup> kg. 100 million weigh about 1 gram.</p><p><b>Size:</b> ~30 μm. Roughly half a human hair\'s width.</p>' },
-                { name: 'Pea', size: 5.0e-3, icon: '?', description: '<p><b>Mass:</b> ~0.2 g (about 1/5 of a paperclip).</p><p><b>Size:</b> ~5 mm, the width of a pencil eraser.</p>' },
+                { name: 'Pea', size: 5.0e-3, icon: '🫛', description: '<p><b>Mass:</b> ~0.2 g (about 1/5 of a paperclip).</p><p><b>Size:</b> ~5 mm, the width of a pencil eraser.</p>' },
                 { name: 'Person', size: 1.7, icon: '🧍', description: '<p><b>Mass:</b> ~70 kg (~150 lbs), like 10 bowling balls.</p><p><b>Size:</b> ~1.7 m tall (~5 ft 7 in), like a refrigerator.</p>' },
                 { name: 'School Bus', size: 11, icon: '🚌', description: '<p><b>Mass:</b> ~10,000 kg (10 tons), like 2 adult elephants.</p><p><b>Size:</b> ~11 m long (~36 ft).</p>' },
                 { name: 'Eiffel Tower', size: 330, icon: '🗼', description: '<p><b>Mass:</b> ~10,000,000 kg (10k tons), like 2,000 elephants.</p><p><b>Size:</b> ~330 m tall (~1,080 ft), 3 football fields high.</p>' },
