--- a/standard-model.html
+++ b/standard-model.html
@@ -1139,7 +1139,7 @@
                             <div class="chart-bar-container">
                                 <div class="chart-bar" style="width: 75%; background-color: #9ca3af;" title="~75% Hydrogen">Hydrogen (75%)</div>
                                 <div class="chart-bar" style="width: 24%; background-color: #6b7280;" title="~24% Helium">Helium (24%)</div>
-                                <div class="chart-bar" style="width: 1%; background-color: #a16207;" title="~1% Heavier Elements">Other (1%)</div>
+                                <div class="chart-bar" style="width: 1%; background-color: #a16207;" title="~1% Heavier Elements">Heavy Elem. (1%)</div>
                             </div>
                         </div>
                         <div class="mt-6">
