--- a/index.html
+++ b/index.html
@@ -417,7 +417,49 @@
     { name: 'AMaj7#11 (shell)', steps: [0, 6, 11] },
     { name: 'FMaj7/A (no 3rd)', steps: [0, 7, 8] },
 ];
-            const TETRAD_DEFS = [{ name: 'Major Triad + Octave', steps: [0, 4, 7, 12] }, { name: 'Minor Triad + Octave', steps: [0, 3, 7, 12] }, { name: 'Major 7th', steps: [0, 4, 7, 11] }, { name: 'Dominant 7th', steps: [0, 4, 7, 10] }, { name: 'Minor 7th', steps: [0, 3, 7, 10] }, { name: 'Half-Diminished 7th', steps: [0, 3, 6, 10] }, { name: 'Diminished 7th', steps: [0, 3, 6, 9] }, { name: 'Minor-Major 7th', steps: [0, 3, 7, 11] }, { name: 'Augmented-Major 7th', steps: [0, 4, 8, 11] }, { name: 'Augmented 7th', steps: [0, 4, 8, 10] }, { name: 'Major 6th', steps: [0, 4, 7, 9] }, { name: 'Minor 6th', steps: [0, 3, 7, 9] }, { name: 'Italian Aug 6th', steps: [0, 4, 6, 12] }, { name: 'French Aug 6th', steps: [0, 2, 4, 6] }, { name: 'German Aug 6th', steps: [0, 3, 4, 6] }, { name: 'Maj add(#4)', steps: [0, 4, 6, 7] }, { name: 'Maj add4', steps: [0, 4, 5, 7] }, { name: 'Maj add(b3)', steps: [0, 3, 4, 7] }, { name: 'Maj add2', steps: [0, 2, 4, 7] }, { name: 'Maj add(b2)', steps: [0, 1, 4, 7] }, { name: 'min add(#4)', steps: [0, 3, 6, 7] }, { name: 'min add4', steps: [0, 3, 5, 7] }, { name: 'min add2', steps: [0, 2, 3, 7] }, { name: 'min add(b2)', steps: [0, 1, 3, 7] }, { name: 'dim add4', steps: [0, 3, 5, 6] }, { name: 'dim add2', steps: [0, 2, 3, 6] }, { name: 'Maj7 sus4', steps: [0, 5, 7, 11] }, { name: 'Dom7 sus4', steps: [0, 5, 7, 10] }, { name: 'Maj7(b5)', steps: [0, 4, 6, 11] }, { name: 'Dom7(b5)', steps: [0, 4, 6, 10] }, { name: 'vi7 (1st inv)', steps: [0, 4, 7, 9] }, { name: 'VImaj7 (1st inv)', steps: [0, 3, 8, 9] }, { name: 'iv7 (2nd inv)', steps: [0, 3, 5, 8] }, { name: 'IVmaj7 (2nd inv)', steps: [0, 4, 5, 9] },];
+            const TETRAD_DEFS = [
+    { name: 'Major Triad + Octave', steps: [0, 4, 7, 12] },
+    { name: 'Minor Triad + Octave', steps: [0, 3, 7, 12] },
+    { name: 'Major 7th', steps: [0, 4, 7, 11] },
+    { name: 'Dominant 7th', steps: [0, 4, 7, 10] },
+    { name: 'Minor 7th', steps: [0, 3, 7, 10] },
+    { name: 'Half-Diminished 7th', steps: [0, 3, 6, 10] },
+    { name: 'Diminished 7th', steps: [0, 3, 6, 9] },
+    { name: 'Minor-Major 7th', steps: [0, 3, 7, 11] },
+    { name: 'Augmented-Major 7th', steps: [0, 4, 8, 11] },
+    { name: 'Augmented 7th', steps: [0, 4, 8, 10] },
+    { name: 'Major 6th', steps: [0, 4, 7, 9] },
+    { name: 'Minor 6th', steps: [0, 3, 7, 9] },
+    { name: 'Italian Aug 6th', steps: [0, 4, 6, 12] },
+    { name: 'French Aug 6th', steps: [0, 2, 4, 6] },
+    { name: 'German Aug 6th', steps: [0, 3, 4, 6] },
+    { name: 'Maj add(#4)', steps: [0, 4, 6, 7] },
+    { name: 'Maj add4', steps: [0, 4, 5, 7] },
+    { name: 'Maj add(b3)', steps: [0, 3, 4, 7] },
+    { name: 'Maj add2', steps: [0, 2, 4, 7] },
+    { name: 'Maj add(b2)', steps: [0, 1, 4, 7] },
+    { name: 'min add(#4)', steps: [0, 3, 6, 7] },
+    { name: 'min add4', steps: [0, 3, 5, 7] },
+    { name: 'min add2', steps: [0, 2, 3, 7] },
+    { name: 'min add(b2)', steps: [0, 1, 3, 7] },
+    { name: 'dim add4', steps: [0, 3, 5, 6] },
+    { name: 'dim add2', steps: [0, 2, 3, 6] },
+    { name: 'Maj7 sus4', steps: [0, 5, 7, 11] },
+    { name: 'Dom7 sus4', steps: [0, 5, 7, 10] },
+    { name: 'Maj7(b5)', steps: [0, 4, 6, 11] },
+    { name: 'Dom7(b5)', steps: [0, 4, 6, 10] },
+    { name: 'VImaj7 (1st inv)', steps: [0, 3, 8, 9] },
+    { name: 'iv7 (2nd inv)', steps: [0, 3, 5, 8] },
+    { name: 'IVmaj7 (2nd inv)', steps: [0, 4, 5, 9] },
+    { name: 'Minor 7th sus4', steps: [0, 5, 7, 10] },
+    { name: 'Dominant 7th sus2', steps: [0, 2, 7, 10] },
+    { name: 'Major 6/9 (no 5th)', steps: [0, 2, 4, 9] },
+    { name: 'Dominant 7th (b9) (no 5th)', steps: [0, 1, 4, 10] },
+    { name: '"So What" Chord (Quartal)', steps: [0, 5, 10, 15] },
+    { name: '"Elektra" Chord', steps: [0, 2, 6, 9] },
+    { name: '"Hendrix" Chord - Dominant 7th (#9) (no 5th)', steps: [0, 3, 4, 10] },
+    { name: 'Quintal Voicing (sus2 add6)', steps: [0, 2, 7, 9] },
+];
             const PSEUDO_DYAD_DEFS = [{ name: 'Pseudo Octave', partials: [0, 1] }, { name: 'Pseudo Fifth', partials: [1, 2] }]; const PSEUDO_TRIAD_DEFS = [{ name: 'Pseudo Major Triad', partials: [3, 4, 5] }, { name: 'Pseudo Minor Triad', partials: [9, 11, 14] }]; const PSEUDO_TETRAD_DEFS = [{ name: 'Pseudo Dom 7th', partials: [3, 4, 5, 6] }];
             function centsToRatio(cents) { return 2 ** (cents / 1200); }
             function getTuningByKey(key) { for (const group in TUNING_SYSTEMS) { if (TUNING_SYSTEMS[group][key]) { return TUNING_SYSTEMS[group][key]; } } return null; }
